18: Add support to capture argument passed to the item context
- Capture the argument passed to the executed item context
- Update TrackerItemContext to include args information, and boolean flag to determine whether the output log shall include args information (false by default)
- Add more tests