@@ -26,12 +26,15 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.15.2'
+
     testImplementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.6'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.6'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 publishing {
